[package]
name = "iced_style_config"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/iced_style_config"
keywords = ["gui"]
categories = ["gui"]
exclude = ["/.*", "/tools"]
description = """
Create Iced style sheets from configuration files.
"""

[package.metadata.docs.rs]
# Note: Do not enable schema feature on docs.rs.
features = ["hot-reloading", "canvas", "qr_code", "iced"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[workspace]
resolver = "2"
members = ["tools/codegen"]

[features]
default = ["hot-reloading"]
hot-reloading = [
    "async-stream",
    "futures-util",
    "iced_futures",
    "notify",
    "tokio",
    "tracing",
]
canvas = ["iced_graphics/canvas"]
qr_code = ["iced_graphics/qr_code"]

# Note: This feature is outside of the normal semver guarantees and minor or
# patch versions of this crate may make breaking changes to them at any time.
schema = ["schemars"]

# Note: iced_* and serde are public dependencies.
[dependencies]
iced_native = "0.5"
iced_style = "0.4"
once_cell = "1"
scoped-tls = "1"
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.7"
toml = "0.5.2"

iced_graphics = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true, default-features = false }
iced_futures = { version = "0.4", optional = true }
schemars = { version = "0.8", optional = true }

# For docs. Not public feature.
iced = { version = "0.4", optional = true, features = ["image", "svg", "canvas", "qr_code"]}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-stream = { version = "0.3", optional = true }
notify = { version = "5", optional = true }
tokio = { version = "1", optional = true, features = ["sync"] }
tracing = { version = "0.1.6", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
iced = "0.4"
